Fixed some path issues in LESS. Decreased side padding on cluster tabs to prevent lecture 8 from overflowing.

--- a/require/src/content/styles.less
+++ b/require/src/content/styles.less
@@ -85,7 +85,7 @@
     }
 
     .drag-button {
-        background: url("@{iconpath}/nonfree/cursor_drag_arrow_32_blur.png") no-repeat;
+        background: ~"url(@{iconpath}/nonfree/cursor_drag_arrow_32_blur.png) no-repeat";
         width: 35px;
         height: 35px;
         top: 2px;
