--- a/require/src/nugget/styles.less
+++ b/require/src/nugget/styles.less
@@ -55,6 +55,7 @@
         &:hover{
             color:darken(#0069D6,20%);
         }
+        padding: 0 9px;
     }
     
     
